// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty TestComponent snapshot 1`] = `
<p
  style={
    Object {
      "color": undefined,
    }
  }
/>
`;

exports[`TestComponent with text & color snapshot 1`] = `
<p
  style={
    Object {
      "color": "rebeccapurple",
    }
  }
>
  Bob Ross is awesome
</p>
`;

exports[`TestComponent with text snapshot 1`] = `
<p
  style={
    Object {
      "color": undefined,
    }
  }
>
  Blah blah blah!!
</p>
`;
